# tiny_pomodoro

./: .gitignore  CMakeLists.txt  Makefile  README.md  build_all.sh  get_sizes.sh  notes.md  pomodoro.html
assets/: tiny_pomodoro.desktop  tiny_pomodoro_pro.desktop
presentation/: check_slides.py  index.html
src/: main.cpp  main_2.asm  main_fltk.cpp  main_pro.cpp  main_pro_plus.cpp  main_pro_plus_ultra.asm  main_raw.cpp  main_raw_plus.cpp  main_raw_plus_pro.asm  timer.hpp
